--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "@types/pg": "^7.14.7",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
