--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/pg": "^7.14.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mongoose": "^5.13.3",
     "pg": "^8.5.1"
   },
   "devDependencies": {
