--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^14.14.3",
     "jest": "^26.6.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.3.5"
