--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@types/node": "^14.14.3",
     "jest": "^26.6.3",
     "morgan": "^1.10.0",
+    "node-mocks-http": "^1.10.1",
     "nodemon": "^2.0.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.3.5"
   }
