--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.4.0",
+    "@sendgrid/mail": "^7.4.6",
     "@types/mongoose": "^5.11.97",
-    "@types/pg": "^7.14.7",
-    "axios": "^0.21.1",
+    "@types/pg": "^7.14.11",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.13.3",
-    "pg": "^8.5.1"
+    "mongoose": "^5.13.9",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^14.14.3",
+    "@types/node": "^14.17.15",
+    "@types/supertest": "^2.0.11",
     "jest": "^26.6.3",
     "morgan": "^1.10.0",
     "node-mocks-http": "^1.10.1",
-    "nodemon": "^2.0.6",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.3.5"
+    "nodemon": "^2.0.12",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.4.3"
   }
 }
